--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Grunt plugin for preventing you from accidentally comitting a merge conflict into your project",
   "main": "Gruntfile.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "mocha tests"
   },
   "devDependencies": {
-    "grunt": "~0.4.0",
+    "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.1.1",
+    "grunt-mocha-cli": "~1.0.1",
+    "mocha": "~1.11.0",
     "should": "~1.2.2"
   },
   "repository": {
